Fix not closing on Mac OS

--- a/chrome/updated.html
+++ b/chrome/updated.html
@@ -4,7 +4,11 @@
         Oneflix Update
     </head>
     <body>
-        <h1>Thanks for updating to v1.1!</h1>
+        <h1>Thanks for updating to v1.2!</h1>
+        <h2>v1.2</h2>
+        <ul>
+            <li>Fix tab not closing on Mac OS</li>
+        </ul>
         <h2>v1.1</h2>
         More streaming site support
         <ul>
@@ -16,8 +20,6 @@
             <li>Closes tab when autoplay starts the next episode</li>
         </ul>
         If you've got a sec please leave a rating or a review
-        <a href="https://joeherbert.dev/oneflix?onboard=true&browser=chrome"
-            >through this link</a
-        >. Cheers!
+        <a href="https://joeherbert.dev/oneflix?onboard=true&browser=chrome">through this link</a>. Cheers!
     </body>
 </html>
