Add popup with options and keyboard shortcut to enable/disable extension

--- a/chrome/updated.html
+++ b/chrome/updated.html
@@ -4,7 +4,12 @@
         Oneflix Update
     </head>
     <body>
-        <h1>Thanks for updating to v1.2!</h1>
+        <h1>Thanks for updating to v1.3!</h1>
+        <h2>v1.3</h2>
+        <ul>
+            <li>Add popup with options</li>
+            <li>Add command to toggle extension enabled/disabled (defaults to Shift+Alt+O)</li>
+        </ul>
         <h2>v1.2</h2>
         <ul>
             <li>Fix tab not closing on Mac OS</li>
