Fix disney+ sometimes using different url, add debugging, fix netflix skipping episode when continuing watching

--- a/chrome/updated.html
+++ b/chrome/updated.html
@@ -4,7 +4,12 @@
         Oneflix Update
     </head>
     <body>
-        <h1>Thanks for updating to v1.3!</h1>
+        <h1>Thanks for updating to v1.4!</h1>
+        <h2>v1.4</h2>
+        <ul>
+            <li>Fix disney+ not working since the url sometimes changes from 'video' to 'play'</li>
+            <li>Fix netflix tabs incorrectly closing at different points if you choose an episode rather than continue watching</li>
+        </ul>
         <h2>v1.3</h2>
         <ul>
             <li>Add popup with options</li>
