--- a/chrome/updated.html
+++ b/chrome/updated.html
@@ -4,7 +4,12 @@
         Oneflix Update
     </head>
     <body>
-        <h1>Thanks for updating to v1.4!</h1>
+        <h1>Thanks for updating to v1.5!</h1>
+        <h2>v1.5</h2>
+        <ul>
+            <li>Change logo from Cantarell to Arial for better support</li>
+            <li>Set inital values on install</li>
+        </ul>
         <h2>v1.4</h2>
         <ul>
             <li>Fix disney+ not working since the url sometimes changes from 'video' to 'play'</li>
