Change url to oneflix.joeherbert.dev

--- a/chrome/updated.html
+++ b/chrome/updated.html
@@ -4,7 +4,9 @@
         Oneflix Update
     </head>
     <body>
-        <h1>Thanks for updating to v1.5!</h1>
+        <h1>Thanks for updating to v1.6!</h1>
+        <h2>v1.6</h2>
+        Minor update to correct links after website moved to https://oneflix.joeherbert.dev
         <h2>v1.5</h2>
         <ul>
             <li>Change logo from Cantarell to Arial for better support</li>
@@ -35,6 +37,6 @@
             <li>Closes tab when autoplay starts the next episode</li>
         </ul>
         If you've got a sec please leave a rating or a review
-        <a href="https://joeherbert.dev/oneflix?onboard=true&browser=chrome">through this link</a>. Cheers!
+        <a href="https://oneflix.joeherbert.dev?onboard=true&browser=chrome">through this link</a>. Cheers!
     </body>
 </html>
