--- a/chrome/updated.html
+++ b/chrome/updated.html
@@ -4,7 +4,9 @@
         Oneflix Update
     </head>
     <body>
-        <h1>Thanks for updating to v1.6!</h1>
+        <h1>Thanks for updating to v1.7!</h1>
+        <h2>v1.7</h2>
+        Added BBC iPlayer to the list of working sites. If you'd like support for another streaming service, please mention it in a review or email <a href="mailto:joe@joeherbert.dev?subject=New%20Streaming%20Service%20Support%20Request&body=Please%20add%20support%20for%3A%20">joe@joeherbert.dev</a>.
         <h2>v1.6</h2>
         Minor update to correct links after website moved to https://oneflix.joeherbert.dev
         <h2>v1.5</h2>
