--- a/chrome/popup.html
+++ b/chrome/popup.html
@@ -89,6 +89,14 @@
                 -ms-transform: translateX(26px);
                 transform: translateX(26px);
             }
+
+            #review {
+                text-align: left;
+            }
+
+            #review a {
+                color: inherit;
+            }
         </style>
     </head>
     <body>
@@ -105,6 +113,10 @@
             >Episodes to watch:
             <input type="number" value="1" id="toWatch" />
         </label>
+        <p id="review">
+            If you find Oneflix useful, please
+            <a href="https://chromewebstore.google.com/detail/Oneflix/mkdljjcpkdmnpnecoenmcblbamiofeph/reviews" target="_blank">leave a review</a>!
+        </p>
         <script src="popup.js"></script>
     </body>
 </html>
